--- a/doc/clay/css/common.css
+++ b/doc/clay/css/common.css
@@ -15,11 +15,244 @@
 
 /*reset*/
 
-html, body { position:relative; width:100%; height:100%; /*overflow:hidden;*/ }
+html, body {
+	position:relative;
+	width:100%; height:100%;
+	min-width:840px;
+}
 
-body,p,h1,h2,h3,h4,h5,h6,ul,ol,li { margin:0; padding:0; }
-body,p,h1,h2,h3,h4,h5,h6,a { font-family:'Noto Sans KR', sans-serif; font-size:17px; font-weight:300;
-							text-decoration:none; color:#60516f; }
+body,p,h1,h2,h3,h4,h5,h6,ul,ol,li { 
+	margin:0; padding:0;
+}
 
-ul,ol,li { list-style:none; }
-img { border:none; vertical-align:middle; }
+body,p,h1,h2,h3,h4,h5,h6,a { 
+	font-family:'Noto Sans KR', sans-serif;
+	font-size:17px; font-weight:300;
+	text-decoration:none;
+	color:#60516f;
+}
+
+ul,ol,li { 
+	list-style:none;
+}
+
+img { 
+	width:100%;
+	border:none;
+	vertical-align:middle;
+}
+
+
+
+
+
+/*Header*/
+
+header {
+	z-index:1000000;
+	position:fixed;
+	top:0; left:0; 
+	width:100%; height:100px; 
+	-webkit-transition:all 0.5s; 
+	-moz-transition:all 0.5s; 
+	-o-transition:all 0.5s; 
+	transition:all 0.5s;
+}
+
+.header_wrap { 
+	position:absolute;
+	bottom:0; left:5%;
+	width:90%; height:40px;
+	border-bottom:1px solid rgba(64,53,74,0.5);
+	box-sizing:border-box;
+	/*background-color:blue;*/
+}
+
+.header_ani { 
+	height:75px;
+	background-color:rgba(244,244,244,0.75);
+	-webkit-transition:all 0.5s; 
+	-moz-transition:all 0.5s; 
+	-o-transition:all 0.5s; 
+	transition:all 0.5s;
+}
+
+.line_ani {
+	border:none;
+}
+
+span.logo a { 
+	display:block; 
+	float:left; 
+	width:75px;
+}
+span.logo a img { 
+	width:100%;
+}
+
+.gnb { 
+	position:absolute; 
+	top:0; right:0; 
+	width:350px; height:40px; 
+	/*background-color:red;*/
+}
+.gnb ul li { 
+	float:left;
+}
+.gnb li + li {
+	margin-left:25px;
+}
+.gnb li a { 
+	display:block;
+	width:100px;
+	font-size:17px;
+	font-weight:300;
+	text-align:center;
+	color:#60516f; 
+	/*background-color:blue;*/
+}
+.gnb li a:hover {
+	opacity:0.5;
+}
+
+b#menu_line { 
+	display:block;
+	position:absolute;
+	bottom:0; left:0;
+	width:100px; height:3px;
+	background-color:#60516f;
+}
+
+#select a,
+#select a span.font_en { 
+	font-weight:500;
+}
+
+
+
+
+
+/*fade*/
+
+.fade_in { 
+	opacity:0;
+}
+
+.show_fade { 
+	opacity:0;
+}
+
+.first_fade { 
+	opacity:0; 
+	-webkit-transform:translate(0, 50px); 
+	-ms-transform:translate(0, 50px); 
+	-moz-transform:translate(0, 50px); 
+	-o-transform:translate(0, 50px); 
+	transform:translate(0, 50px); 
+	-webkit-transition:all 0.5s; 
+	-moz-transition:all 0.5s; 
+	-o-transition:all 0.5s; 
+	transition:all 0.5s; 
+}
+
+.down_fade { 
+	opacity:0; 
+	-webkit-transform:translate(0, -50px); 
+	-ms-transform:translate(0, -50px); 
+	-moz-transform:translate(0, -50px); 
+	-o-transform:translate(0, -50px); 
+	transform:translate(0, -50px); 
+	-webkit-transition:all 0.5s; 
+	-moz-transition:all 0.5s; 
+	-o-transition:all 0.5s; 
+	transition:all 0.5s; 
+}
+
+.up_fade { 
+	opacity:0; 
+	-webkit-transform:translate(0, 50px); 
+	-ms-transform:translate(0, 50px); 
+	-moz-transform:translate(0, 50px); 
+	-o-transform:translate(0, 50px); 
+	transform:translate(0, 50px); 
+	-webkit-transition:all 1s; 
+	-moz-transition:all 1s; 
+	-o-transition:all 1s; 
+	transition:all 1s; 
+}
+
+.left_fade { 
+	opacity:0; 
+	-webkit-transform:translate(100px, 0); 
+	-ms-transform:translate(100px, 0); 
+	-moz-transform:translate(100px, 0); 
+	-o-transform:translate(100px, 0); 
+	transform:translate(100px, 0); 
+	-webkit-transition:all 1s; 
+	-moz-transition:all 1s; 
+	-o-transition:all 1s; 
+	transition:all 1s; 
+}
+
+.visible { 
+	opacity:1; 
+	-webkit-transform:translate(0, 0); 
+	-ms-transform:translate(0, 0); 
+	-moz-transform:translate(0, 0); 
+	-o-transform:translate(0, 0); 
+	transform:translate(0, 0); 
+	-webkit-transition:all 1.5s; 
+	-moz-transition:all 1.5s; 
+	-o-transition:all 1.5s; 
+	transition:all 1.5s; 
+}
+
+
+
+
+/*Footer*/
+
+footer { 
+	position:relative;
+	top:0; left:0; 
+	width:100%; height:175px;
+	background-color:#f4f4f4;
+}
+.footer_wrap { 
+	position:absolute;
+	bottom:50px; left:5%;
+	width:90%;
+}
+p#copyright { 
+	position:absolute;
+	bottom:0; right:3%;
+	font-size:13px; line-height:33px;
+	color:#aaa; 
+	-webkit-transform:rotate(90deg); 
+	-ms-transform:rotate(90deg); 
+	-moz-transform:rotate(90deg); 
+	-o-transform:rotate(90deg); 
+	transform:rotate(90deg); 
+	-webkit-transform-origin:100% 100%; 
+	-ms-transform-origin:100% 100%; 
+	-moz-transform-origin:100% 100%; 
+	-o-transform-origin:100% 100%; 
+	transform-origin:100% 100%;
+}
+
+
+
+
+
+/*AddClass*/
+
+.font_en, .font_en a { 
+	font-family:'Poppins', sans-serif; 
+}
+
+.transition { 
+	-webkit-transition:all 0.5s; 
+	-moz-transition:all 0.5s; 
+	-o-transition:all 0.5s; 
+	transition:all 0.5s; 
+}
